force-app/main/default/objects/Account/fields/Agrement__c.field-meta.xml
<CustomField>
    <fullName>Agrement__c</fullName>
    <label>Agrément</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>