force-app/main/default/objects/Account/fields/LPCR_AccueilOccasionel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccueilOccasionel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accueil occasionnel</label>
    <type>Checkbox</type>
</CustomField>