force-app/main/default/objects/Account/fields/LPCR_AccueilRegulier__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccueilRegulier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accueil régulier</label>
    <type>Checkbox</type>
</CustomField>