force-app/main/default/objects/Account/fields/LPCR_AccueilUrgence__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccueilUrgence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accueil d&apos;urgence</label>
    <type>Checkbox</type>
</CustomField>