force-app/main/default/objects/Account/fields/LPCR_Actif__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Actif__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Un compte entreprise qui ne contient pas de contrat en cours est dit inactif</description>
    <inlineHelpText>Un compte entreprise qui ne contient pas de contrat en cours est dit inactif</inlineHelpText>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>