force-app/main/default/objects/Account/fields/LPCR_Adherente__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Adherente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crèche Adhérente</label>
    <type>Checkbox</type>
</CustomField>