force-app/main/default/objects/Account/fields/LPCR_AdhesionStatusValue__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AdhesionStatusValue__c</fullName>
    <label>Valeur d&apos;adhésion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>