force-app/main/default/objects/Account/fields/LPCR_AfficherInfosFamillesFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AfficherInfosFamillesFacture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>case à cocher si on souhaite faire apparaître les informations spécifiques aux familles sur la facture B2B</description>
    <inlineHelpText>case à cocher si on doit faire apparaître les informations spécifiques aux familles sur la facture B2B</inlineHelpText>
    <label>Afficher infos familles facture</label>
    <type>Checkbox</type>
</CustomField>