force-app/main/default/objects/Account/fields/LPCR_AfficherNomsFamillesFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AfficherNomsFamillesFacture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>case à cocher si on souhaite faire apparaître les noms des familles sur la facture B2B</description>
    <inlineHelpText>case à cocher si on doit faire apparaître les noms des familles sur la facture B2B</inlineHelpText>
    <label>Afficher noms familles facture</label>
    <type>Checkbox</type>
</CustomField>