force-app/main/default/objects/Account/fields/LPCR_AgrementCible__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AgrementCible__c</fullName>
    <label>Agrémént cible</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>