force-app/main/default/objects/Account/fields/LPCR_AgrementGrands__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AgrementGrands__c</fullName>
    <label>Agrément Grands</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>