force-app/main/default/objects/Account/fields/LPCR_AgrementMoyens__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AgrementMoyens__c</fullName>
    <label>Agrément Moyens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>