force-app/main/default/objects/Account/fields/LPCR_AgrementPMI__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AgrementPMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agrément PMI</label>
    <type>Checkbox</type>
</CustomField>