force-app/main/default/objects/Account/fields/LPCR_AgrementTotal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AgrementTotal__c</fullName>
    <inlineHelpText>Agrément actuel de la crèche</inlineHelpText>
    <label>Agrément Actuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>