force-app/main/default/objects/Account/fields/LPCR_Agrment120__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Agrment120__c</fullName>
    <formula>IF(LPCR_AgrementTotal__c &lt;= 20, LPCR_AgrementTotal__c*1.1,
IF(LPCR_AgrementTotal__c &lt;= 40, LPCR_AgrementTotal__c*1.15, 
LPCR_AgrementTotal__c*1.2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrément +120%</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>