force-app/main/default/objects/Account/fields/LPCR_AllocataireCAF__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AllocataireCAF__c</fullName>
    <description>Pour un compte famille, désigne qui est l&#39;allocataire CAF</description>
    <inlineHelpText>Utiliser le représentant 1 ou le représentant 2 pour le numéro d&#39;allocataire CAF ?</inlineHelpText>
    <label>Allocataire CAF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Représentant 1</fullName>
            </value>
            <value>
                <fullName>Représentant 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>