force-app/main/default/objects/Account/fields/LPCR_AutrePrestataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AutrePrestataire__c</fullName>
    <label>Autre prestataire</label>
    <length>25</length>
    <type>Text</type>
</CustomField>