force-app/main/default/objects/Account/fields/LPCR_BerceauxCommercialisables__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BerceauxCommercialisables__c</fullName>
    <label>Nombre de berceaux commercialisable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>