force-app/main/default/objects/Account/fields/LPCR_BerceauxDisponibles__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BerceauxDisponibles__c</fullName>
    <label>Nombre de berceaux disponible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>