force-app/main/default/objects/Account/fields/LPCR_BIC__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BIC__c</fullName>
    <label>BIC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>