force-app/main/default/objects/Account/fields/LPCR_BudgetAnnuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BudgetAnnuel__c</fullName>
    <label>Budget annuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>