force-app/main/default/objects/Account/fields/LPCR_CA__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CA__c</fullName>
    <label>Chiffre d&#39;affaires annuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>