force-app/main/default/objects/Account/fields/LPCR_CessationActivite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CessationActivite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cessation d&apos;activité</label>
    <type>Checkbox</type>
</CustomField>