force-app/main/default/objects/Account/fields/LPCR_Chorus__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Chorus__c</fullName>
    <label>Lien Chorus</label>
    <type>Url</type>
</CustomField>