force-app/main/default/objects/Account/fields/LPCR_ClientInternational__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ClientInternational__c</fullName>
    <label>Client international de</label>
    <length>80</length>
    <type>Text</type>
</CustomField>