force-app/main/default/objects/Account/fields/LPCR_ClientVip__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ClientVip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client VIP</label>
    <type>Checkbox</type>
</CustomField>