force-app/main/default/objects/Account/fields/LPCR_CodeAnalytique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeAnalytique__c</fullName>
    <label>Code analytique</label>
    <length>15</length>
    <type>Text</type>
</CustomField>