force-app/main/default/objects/Account/fields/LPCR_CodeBIC__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeBIC__c</fullName>
    <label>Code BIC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>