force-app/main/default/objects/Account/fields/LPCR_CodeIBAN__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeIBAN__c</fullName>
    <label>Code IBAN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>