force-app/main/default/objects/Account/fields/LPCR_CodePaie__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodePaie__c</fullName>
    <label>Code Paie</label>
    <length>50</length>
    <type>Text</type>
</CustomField>