force-app/main/default/objects/Account/fields/LPCR_CodePreinscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodePreinscription__c</fullName>
    <label>Code préinscription</label>
    <length>128</length>
    <type>Text</type>
</CustomField>