force-app/main/default/objects/Account/fields/LPCR_CodeReservataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeReservataire__c</fullName>
    <label>Code réservataire</label>
    <length>128</length>
    <type>Text</type>
</CustomField>