force-app/main/default/objects/Account/fields/LPCR_CodeServiceChorus__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeServiceChorus__c</fullName>
    <label>Code service Chorus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>