force-app/main/default/objects/Account/fields/LPCR_CommentaireIncidentPaiment__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CommentaireIncidentPaiment__c</fullName>
    <label>Commentaire Incident de paiement</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>