force-app/main/default/objects/Account/fields/LPCR_CompteAnalytiqueClient__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteAnalytiqueClient__c</fullName>
    <label>Compte analytique du client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>