force-app/main/default/objects/Account/fields/LPCR_CompteBancaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteBancaire__c</fullName>
    <label>Compte Bancaire</label>
    <length>20</length>
    <type>Text</type>
</CustomField>