force-app/main/default/objects/Account/fields/LPCR_Concurrence__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Concurrence__c</fullName>
    <label>Tarif concurrence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>