force-app/main/default/objects/Account/fields/LPCR_ContactCommercial__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactCommercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Commercial</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comptes (Contact Commercial)</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>