force-app/main/default/objects/Account/fields/LPCR_ContactDirectrice__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactDirectrice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact directrice</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comptes (Contact directrice)</relationshipLabel>
    <relationshipName>ComptesDirectrice</relationshipName>
    <type>Lookup</type>
</CustomField>