force-app/main/default/objects/Account/fields/LPCR_ContactEnfant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactEnfant1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Enfant 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Enfant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comptes (Enfant 1)</relationshipLabel>
    <relationshipName>Enfant1</relationshipName>
    <type>Lookup</type>
</CustomField>