force-app/main/default/objects/Account/fields/LPCR_ContactEnfant2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactEnfant2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Enfant 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Enfant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comptes (Enfant 2)</relationshipLabel>
    <relationshipName>Enfant2</relationshipName>
    <type>Lookup</type>
</CustomField>