force-app/main/default/objects/Account/fields/LPCR_ContactPrincipalCompte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactPrincipalCompte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Principal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comptes (Contact Principal)</relationshipLabel>
    <relationshipName>Comptes2</relationshipName>
    <type>Lookup</type>
</CustomField>