force-app/main/default/objects/Account/fields/LPCR_Contrat_existant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Contrat_existant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrat existant</label>
    <type>Checkbox</type>
</CustomField>