force-app/main/default/objects/Account/fields/LPCR_Creche_LienCapitalistique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Creche_LienCapitalistique__c</fullName>
    <label>Lien capitalistique</label>
    <length>200</length>
    <type>Text</type>
</CustomField>