force-app/main/default/objects/Account/fields/LPCR_CrecheAgrement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheAgrement__c</fullName>
    <label>Agrement</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>