force-app/main/default/objects/Account/fields/LPCR_CrecheAmplitude__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheAmplitude__c</fullName>
    <formula>(Hour(LPCR_CrecheHoraireFermeture__c) - Hour(LPCR_CrecheHoraireOuverture__c)) + ((Minute(LPCR_CrecheHoraireFermeture__c) - Minute(LPCR_CrecheHoraireOuverture__c))/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amplitude</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>