force-app/main/default/objects/Account/fields/LPCR_CrecheAmplitudeSpecifique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheAmplitudeSpecifique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amplitude Specifique</label>
    <type>Checkbox</type>
</CustomField>