force-app/main/default/objects/Account/fields/LPCR_CrecheBilingue__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheBilingue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bilingue</label>
    <type>Checkbox</type>
</CustomField>