force-app/main/default/objects/Account/fields/LPCR_CrecheBio__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheBio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bio</label>
    <type>Checkbox</type>
</CustomField>