force-app/main/default/objects/Account/fields/LPCR_CrecheChoix1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheChoix1__c</fullName>
    <label>Crèche choix 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>