force-app/main/default/objects/Account/fields/LPCR_CrecheChoix2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheChoix2__c</fullName>
    <label>Crèche choix 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>