force-app/main/default/objects/Account/fields/LPCR_CrecheChoix3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheChoix3__c</fullName>
    <label>Crèche choix 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>