force-app/main/default/objects/Account/fields/LPCR_CrecheCodePays__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheCodePays__c</fullName>
    <description>code pays [ISO-3166 2-letter country code]</description>
    <label>Pays</label>
    <length>3</length>
    <type>Text</type>
</CustomField>