force-app/main/default/objects/Account/fields/LPCR_CrecheCouches__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheCouches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Couches</label>
    <type>Checkbox</type>
</CustomField>