force-app/main/default/objects/Account/fields/LPCR_CrecheDepartement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheDepartement__c</fullName>
    <label>Département</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ain</fullName>
            </value>
            <value>
                <fullName>Aisne</fullName>
            </value>
            <value>
                <fullName>Allier</fullName>
            </value>
            <value>
                <fullName>Alpes-de-Haute-Provence</fullName>
            </value>
            <value>
                <fullName>Hautes-Alpes</fullName>
            </value>
            <value>
                <fullName>Alpes-Maritimes</fullName>
            </value>
            <value>
                <fullName>Ardèche</fullName>
            </value>
            <value>
                <fullName>Ardennes</fullName>
            </value>
            <value>
                <fullName>Ariège</fullName>
            </value>
            <value>
                <fullName>Aube</fullName>
            </value>
            <value>
                <fullName>Aude</fullName>
            </value>
            <value>
                <fullName>Aveyron</fullName>
            </value>
            <value>
                <fullName>Bouches-du-Rhône</fullName>
            </value>
            <value>
                <fullName>Calvados</fullName>
            </value>
            <value>
                <fullName>Cantal</fullName>
            </value>
            <value>
                <fullName>Charente</fullName>
            </value>
            <value>
                <fullName>Charente-Maritime</fullName>
            </value>
            <value>
                <fullName>Cher</fullName>
            </value>
            <value>
                <fullName>Corrèze</fullName>
            </value>
            <value>
                <fullName>Corse-du-Sud</fullName>
            </value>
            <value>
                <fullName>Haute-Corse</fullName>
            </value>
            <value>
                <fullName>Côte-d&apos;Or</fullName>
            </value>
            <value>
                <fullName>Côtes d&apos;Armor</fullName>
            </value>
            <value>
                <fullName>Creuse</fullName>
            </value>
            <value>
                <fullName>Dordogne</fullName>
            </value>
            <value>
                <fullName>Doubs</fullName>
            </value>
            <value>
                <fullName>Drôme</fullName>
            </value>
            <value>
                <fullName>Eure</fullName>
            </value>
            <value>
                <fullName>Eure-et-Loir</fullName>
            </value>
            <value>
                <fullName>Finistère</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>