force-app/main/default/objects/Account/fields/LPCR_CrecheEspaceExterieur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheEspaceExterieur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Espace Extérieur</label>
    <type>Checkbox</type>
</CustomField>