force-app/main/default/objects/Account/fields/LPCR_CrecheHoraireFermeture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheHoraireFermeture__c</fullName>
    <label>Horaire de fermeture</label>
    <type>Time</type>
</CustomField>