force-app/main/default/objects/Account/fields/LPCR_CrecheHoraireOuverture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheHoraireOuverture__c</fullName>
    <label>Horaire d&apos;ouverture</label>
    <type>Time</type>
</CustomField>