force-app/main/default/objects/Account/fields/LPCR_CrecheLait__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheLait__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lait</label>
    <type>Checkbox</type>
</CustomField>