force-app/main/default/objects/Account/fields/LPCR_CrecheLatitude__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheLatitude__c</fullName>
    <label>Latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>