force-app/main/default/objects/Account/fields/LPCR_CrecheLDS__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheLDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LDS</label>
    <type>Checkbox</type>
</CustomField>