force-app/main/default/objects/Account/fields/LPCR_CrecheLongitude__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheLongitude__c</fullName>
    <label>Longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>