force-app/main/default/objects/Account/fields/LPCR_CrecheMarcheurs__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheMarcheurs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marcheurs</label>
    <type>Checkbox</type>
</CustomField>