force-app/main/default/objects/Account/fields/LPCR_CrecheNumStatutAdhesion__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheNumStatutAdhesion__c</fullName>
    <formula>IF(ISPICKVAL(LPCR_CrecheStatutAdhesion__c, &quot;Adherent&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valeur Adhesion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>