force-app/main/default/objects/Account/fields/LPCR_CrechePMI__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrechePMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMI</label>
    <type>Checkbox</type>
</CustomField>