force-app/main/default/objects/Account/fields/LPCR_CrecheProjet__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheProjet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Projet</label>
    <type>Checkbox</type>
</CustomField>