force-app/main/default/objects/Account/fields/LPCR_CrecheRachat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheRachat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rachat</label>
    <type>Checkbox</type>
</CustomField>