force-app/main/default/objects/Account/fields/LPCR_CrecheRegionCommerciale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheRegionCommerciale__c</fullName>
    <label>Région commerciale de la crèche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDF</fullName>
            </value>
            <value>
                <fullName>GrandO</fullName>
                <label>Grand-Ouest</label>
            </value>
            <value>
                <fullName>PACALR</fullName>
                <label>PACA-LR</label>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>NordE</fullName>
                <label>Nord-Est</label>
            </value>
            <value>
                <fullName>GrandSud</fullName>
                <label>Grand-Sud</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>