force-app/main/default/objects/Account/fields/LPCR_CrecheRepas__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheRepas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repas</label>
    <type>Checkbox</type>
</CustomField>