force-app/main/default/objects/Account/fields/LPCR_CrecheRF__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheRF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RF</label>
    <type>Checkbox</type>
</CustomField>