force-app/main/default/objects/Account/fields/LPCR_CrecheStatutAdhesion__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheStatutAdhesion__c</fullName>
    <label>Statut Adhésion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adherent</fullName>
            </value>
            <value>
                <fullName>Non-adherent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>