force-app/main/default/objects/Account/fields/LPCR_CrecheVisite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheVisite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crèche visitée</label>
    <type>Checkbox</type>
</CustomField>