force-app/main/default/objects/Account/fields/LPCR_CTNum__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CTNum__c</fullName>
    <description>IS-2344 : Créer les CTNUM DES COMPTES ENTREPRISES</description>
    <label>CTNUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>