force-app/main/default/objects/Account/fields/LPCR_DateCessationActivite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateCessationActivite__c</fullName>
    <label>Date Cessation d&apos;activité</label>
    <type>Date</type>
</CustomField>