force-app/main/default/objects/Account/fields/LPCR_DateCloture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateCloture__c</fullName>
    <label>Date de clôture</label>
    <type>Date</type>
</CustomField>