force-app/main/default/objects/Account/fields/LPCR_DateDebutContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebutContrat__c</fullName>
    <label>Date de début de contrat</label>
    <type>Date</type>
</CustomField>