force-app/main/default/objects/Account/fields/LPCR_DateDernierAO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDernierAO__c</fullName>
    <label>Date dernier AO</label>
    <type>Date</type>
</CustomField>