force-app/main/default/objects/Account/fields/LPCR_DateDernierAppelOffre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDernierAppelOffre__c</fullName>
    <label>Date du dernier appel d&apos;offre</label>
    <summarizedField>Opportunity.LPCR_DatePublication__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>AO Public DSP, AO Public Réservation</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>