force-app/main/default/objects/Account/fields/LPCR_DateFinContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFinContrat__c</fullName>
    <label>Date de fin de contrat</label>
    <type>Date</type>
</CustomField>