force-app/main/default/objects/Account/fields/LPCR_DateOuverture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateOuverture__c</fullName>
    <label>Date d&apos;ouverture</label>
    <type>Date</type>
</CustomField>