force-app/main/default/objects/Account/fields/LPCR_DateProchainAO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateProchainAO__c</fullName>
    <label>Date prochain AO</label>
    <type>Date</type>
</CustomField>