force-app/main/default/objects/Account/fields/LPCR_DateProchainAppelOffre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateProchainAppelOffre__c</fullName>
    <label>Date du prochain appel d&apos;offre</label>
    <type>Date</type>
</CustomField>