force-app/main/default/objects/Account/fields/LPCR_DateSignatureRUM__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateSignatureRUM__c</fullName>
    <label>Date de signature RUM</label>
    <type>Date</type>
</CustomField>