force-app/main/default/objects/Account/fields/LPCR_DateVisite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateVisite__c</fullName>
    <label>Date Visite</label>
    <type>Date</type>
</CustomField>