force-app/main/default/objects/Account/fields/LPCR_DateVisiteAgrement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateVisiteAgrement__c</fullName>
    <label>Date visite agrément</label>
    <type>Date</type>
</CustomField>