force-app/main/default/objects/Account/fields/LPCR_DebutValiditePurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DebutValiditePurchaseOrder__c</fullName>
    <label>Début de validité Purchase Order</label>
    <type>Date</type>
</CustomField>