force-app/main/default/objects/Account/fields/LPCR_Departement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Departement__c</fullName>
    <formula>IF(BEGINS(BillingPostalCode,&#39;97&#39;),LEFT(BillingPostalCode,3),LEFT(BillingPostalCode,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Département</label>
    <type>Text</type>
</CustomField>