force-app/main/default/objects/Account/fields/LPCR_DepotChorus__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DepotChorus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture à déposer sur Chorus</label>
    <type>Checkbox</type>
</CustomField>